--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-myconnection": "^1.0.4",
-    "method-override": "^3.0.0"
+    "express-validator": "^5.3.0",
+    "method-override": "^3.0.0",
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "live-server": "^1.2.0",
